[gd_scene load_steps=5 format=3 uid="uid://dw6imoh8k58m1"]

[ext_resource type="Script" path="res://gui/panels/MenuPanel.gd" id="1_tuea8"]
[ext_resource type="Shader" path="res://gui/panels/PlasticPanel.gdshader" id="2_xtruc"]
[ext_resource type="PackedScene" uid="uid://gprht0fu6hyh" path="res://gui/components/GlowButton.tscn" id="3_mvq1g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h57gu"]
resource_local_to_scene = true
shader = ExtResource("2_xtruc")
shader_parameter/size = Vector2(768, 48)
shader_parameter/light_intensity = 0.0
shader_parameter/light_smoothness = 0.003
shader_parameter/light_inverted = 1
shader_parameter/border_width = 0
shader_parameter/border_smoothness = 0.05
shader_parameter/bolt_offset = Vector2(11, 11)
shader_parameter/bolt_scale = 10.0
shader_parameter/bolt_size = 0.45
shader_parameter/bolt_smoothness = 0.07
shader_parameter/bolt_thickness = 0.2
shader_parameter/bolt_visibility = 0.8
shader_parameter/bolt_shine_offset = 21.0
shader_parameter/bolt_shine_strength = 7.0
shader_parameter/bolt_shine_reduction = 2.5

[node name="MenuPanel" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme_type_variation = &"MenuPanel"
script = ExtResource("1_tuea8")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_h57gu")
layout_mode = 2

[node name="Content" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="ContentPanel" type="PanelContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"MenuPanelHighlight"

[node name="Layout" type="HBoxContainer" parent="Content/ContentPanel"]
layout_mode = 2
alignment = 2

[node name="SaveButton" parent="Content/ContentPanel/Layout" instance=ExtResource("3_mvq1g")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
toggle_mode = false
text = "SAVE"
off_color = Color(0.0800239, 0.0854298, 0.112988, 1)

[node name="LoadButton" parent="Content/ContentPanel/Layout" instance=ExtResource("3_mvq1g")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
toggle_mode = false
text = "LOAD"
off_color = Color(0.0800239, 0.0854298, 0.112988, 1)

[node name="ExportButton" parent="Content/ContentPanel/Layout" instance=ExtResource("3_mvq1g")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
toggle_mode = false
text = "EXPORT"
off_color = Color(0.0800239, 0.0854298, 0.112988, 1)

[node name="AboutButton" parent="Content/ContentPanel/Layout" instance=ExtResource("3_mvq1g")]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
toggle_mode = false
text = "?"
off_color = Color(0.0800239, 0.0854298, 0.112988, 1)
